--- a/roles/k3s_node_finalizer/meta/main.yml
+++ b/roles/k3s_node_finalizer/meta/main.yml
@@ -1,8 +1,12 @@
 ---
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  author: @anovikov-el @apanasiuk-el
+  description: >
+    Ansible role for cleanly uninstalling a K3s server or agent node from an on-premise machine.
+    The role detects and executes the appropriate uninstall script based on the node's role
+    (server or agent), and provides debug output if the script is not found.
+    Intended for controlled decommissioning of K3s nodes in a cluster environment.
+  company: Edenlab LLC
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -15,7 +19,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: Apache
 
   min_ansible_version: 2.9
 
@@ -36,11 +40,10 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
+  platforms:
+    - name: RedHat
+      versions:
+        - "9"
   # - name: SomePlatform
   #   versions:
   #   - all
@@ -48,7 +51,12 @@ galaxy_info:
   #   - 7
   #   - 99.99
 
-  galaxy_tags: []
+  galaxy_tags:
+    - k3s
+    - kubernetes
+    - ansible
+    - onprem
+    - devops
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
@@ -62,3 +70,5 @@ dependencies: []
 collections:
 - operator_sdk.util
 - kubernetes.core
+- ansible.posix
+- community.general
