--- a/roles/k3s_remote_machine/meta/main.yml
+++ b/roles/k3s_remote_machine/meta/main.yml
@@ -1,8 +1,13 @@
 ---
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  author: @anovikov-el @apanasiuk-el
+  description: >
+    Ansible role for preparing a Red Hat 9-based system to run a K3s cluster.
+    It configures the hostname, updates system packages, installs required dependencies,
+    loads necessary kernel modules, sets sysctl and SELinux parameters,
+    disables swap, ensures NTP and firewall setup, and enables cgroups v2 when needed.
+    The role also supports additional disk and firewalld configuration via conditional includes.
+  company: Edenlab LLC
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -15,7 +20,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: Apache
 
   min_ansible_version: 2.9
 
@@ -36,11 +41,10 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
+  platforms:
+    - name: RedHat
+      versions:
+        - "9"
   # - name: SomePlatform
   #   versions:
   #   - all
@@ -48,7 +52,12 @@ galaxy_info:
   #   - 7
   #   - 99.99
 
-  galaxy_tags: []
+  galaxy_tags:
+    - k3s
+    - kubernetes
+    - ansible
+    - onprem
+    - devops
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
