--- a/roles/k3s_remote_machine/meta/main.yml
+++ b/roles/k3s_remote_machine/meta/main.yml
@@ -1,13 +1,13 @@
 ---
 galaxy_info:
-  author: @anovikov-el @apanasiuk-el
+  author: "@anovikov-el @apanasiuk-el"
   description: >
     Ansible role for preparing a Red Hat 9-based system to run a K3s cluster.
     It configures the hostname, updates system packages, installs required dependencies,
     loads necessary kernel modules, sets sysctl and SELinux parameters,
     disables swap, ensures NTP and firewall setup, and enables cgroups v2 when needed.
     The role also supports additional disk and firewalld configuration via conditional includes.
-  company: Edenlab LLC
+  company: "Edenlab LLC"
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
