#1 - add operator status phases

--- a/config/crd/bases/config.onprem.edenlab.io_k3sremotemachines.yaml
+++ b/config/crd/bases/config.onprem.edenlab.io_k3sremotemachines.yaml
@@ -13,6 +13,10 @@ spec:
   scope: Namespaced
   versions:
   - name: v1alpha1
+    additionalPrinterColumns:
+    - name: PHASE
+      type: string
+      jsonPath: .status.phase
     schema:
       openAPIV3Schema:
         description: K3SRemoteMachine is the Schema for the k3sremotemachines API
