--- a/roles/operator_status/tasks/main.yml
+++ b/roles/operator_status/tasks/main.yml
@@ -11,10 +11,6 @@
   set_fact:
     current_phase: "{{ current_cr_status.resources[0].status.phase | default('') }}"
 
-- name: test current phase
-  debug:
-    msg: "{{ current_phase }}"
-
 - name: Set phase '{{ new_phase }}' if it differs from the current one
   operator_sdk.util.k8s_status:
     api_version: config.onprem.edenlab.io/v1alpha1
@@ -24,6 +20,7 @@
     status:
       phase: "{{ new_phase }}"
       message: "{{ new_message | default(omit) }}"
+      ready: "{{ new_ready_status }}"
   when: >
     current_phase != new_phase and
     expected_previous_phase is defined and current_phase in expected_previous_phase
